# the-lich-arbitrage

./: .gitignore  Cargo.toml  README.md
config/: default.toml
src/: lib.rs  main.rs
src/arbitrage/: analyzer.rs  mod.rs  opportunity.rs  strategy.rs
src/config/: dex.rs  mod.rs  tokens.rs  wallet.rs
src/data/: market_data.rs  mod.rs  order_book.rs  pool_data.rs  price_feed.rs
src/error/: mod.rs
src/monitoring/: mod.rs
src/network/: health_monitor.rs  mod.rs  rpc_manager.rs  websocket.rs
src/transaction/: builder.rs  executor.rs  manager.rs  mod.rs
