[package]
name = "the-lich"
version = "0.1.0"
edition = "2021"
authors = ["The Lich Team"]
description = "High-speed Solana arbitrage bot"

[dependencies]
# Solana Core
solana-sdk = "1.18"
solana-client = "1.18"
spl-token = "4.0"

# Async Runtime
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
futures = "0.3"
async-trait = "0.1"

# Serialization & Config
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
config = "0.14"
toml = "0.8"

# Decimal Math for Financial Calculations
rust_decimal = { version = "1.32", features = ["serde-with-str"] }

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
log = "0.4"

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# HTTP Client
reqwest = { version = "0.11", features = ["json"] }

# Cryptography (compatible with Solana)
ed25519-dalek = "1.0"
bs58 = "0.5"

# Time & UUID
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# Collections & Utilities
dashmap = "5.5"
once_cell = "1.19"

# Optional: Jito MEV (will be added when available)
# jito-sdk = { git = "https://github.com/jito-foundation/jito-sdk", optional = true }

[features]
default = []
jito = []  # Enable Jito MEV features when ready
